[gd_scene load_steps=9 format=3 uid="uid://d3g3k55x8m8ml"]

[ext_resource type="FontFile" uid="uid://3viwgpbdlxmv" path="res://Assets/Tiny5-Regular.ttf" id="1_2824h"]
[ext_resource type="Script" path="res://Scenes/start_screen.gd" id="1_ycybq"]
[ext_resource type="Texture2D" uid="uid://bncdv56abjpsu" path="res://Assets/Sprite/World.png" id="2_ifqvg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4og2i"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62i0t"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21867"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.0591158, 0.0854143, 0.199324, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_qcbk4"]
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("1_2824h")
Button/styles/focus = SubResource("StyleBoxFlat_4og2i")
Button/styles/normal = SubResource("StyleBoxFlat_62i0t")
Label/font_sizes/font_size = 24
Label/fonts/font = ExtResource("1_2824h")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_21867")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a471a"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_ycybq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_qcbk4")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 368.0
texture = ExtResource("2_ifqvg")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = -56.0
offset_right = 82.0
offset_bottom = -2.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.88, 0.792, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
text = "Pacman
"
horizontal_alignment = 1

[node name="CenterContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -80.0
offset_right = 48.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_a471a")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="Control/CenterContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.88, 0.792, 0, 1)
disabled = true
text = "Start"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.88, 0.792, 0, 1)
disabled = true
text = "Quit"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true
